--- a/src/pages/grades/grades.html
+++ b/src/pages/grades/grades.html
@@ -6,4 +6,5 @@
 
 </ion-header>
 <ion-content class="back"  padding>
+  <button ion-button black (clic)="choose()" > UpLoad a File </button>
     </ion-content>
