--- a/src/pages/courses/courses.html
+++ b/src/pages/courses/courses.html
@@ -12,9 +12,9 @@
     <table id="subjects"  >
 
         <tr >
+         <th>Course name</th>
+         <th>credit hours</th>
           <th>Code</th>
-          <th>Course name</th>
-          <th>credit hours</th>
           <th>choose</th>
 
         </tr>
@@ -32,6 +32,7 @@
                                  </table> 
 
 <br> <br>
-<button ion-button (click)="Courses()" style="color: rgb(207, 32, 32)">Save</button>
+<button ion-button (click)="Courses()"  color="dark"  full round style="color:whitesmoke; display:block;
+margin: 0 auto;"> Save </button>
 
 </ion-content>
