--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -23,18 +23,18 @@
         <ion-card-content>
         <ion-list no-line>
         <ion-item>
-            <p> Fullname: {{ (profileData | async)?.fullName }} </p>
+            <p> Fullname:     {{ (profileData | async)?.fullName }} </p>
 
         </ion-item>
         <ion-item>
-            <p> Gender: {{ (profileData | async)?.gender }} </p>
-
+            <p> Gender:  
+            {{ (profileData | async)?.gender }} </p>
         </ion-item>
         <ion-item>
-            <p> Level: {{ (profileData | async)?.level }} </p>
+            <p> Level:   {{ (profileData | async)?.level }} </p>
         </ion-item>
         <ion-item>
-          <p> Semester : spring </p>
+          <p> Semester :  spring </p>
         </ion-item>
         <ion-item>
           <p> Academic Year : 2018-2019 </p>
