--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -2,5 +2,5 @@
   <ion-tab [root]="tab1Root" tabTitle="Profile" tabIcon="contact"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Courses" tabIcon="book"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle=" Timetable" tabIcon="calendar"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Grades" tabIcon="paper"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="lectures" tabIcon="paper"></ion-tab>
 </ion-tabs>
