--- a/src/pages/grades/grades.html
+++ b/src/pages/grades/grades.html
@@ -6,7 +6,33 @@
 
 </ion-header>
 <ion-content class="back"  padding>
-  <input type="file" [(ngModel)]="filePath" #ngFilePath="ngModel">
-  <button ion-button black (clic)="uploadFile()" > UpLoad a File </button>
+  <div *ngIf="currentUpload">
+    <div class="progress">
+      <div class="progress-bar progress-bar-animated" [ngStyle]="{ 'width': currentUpload?.progress + '%' }"></div>
+    </div>
+    Progress: {{currentUpload?.name}} | {{currentUpload?.progress}}% Complete
+  </div>
+  
+      <label>
+         <input type="file" (change)="detectFiles($event)">
+      </label>
+  
+      <button
+              [disabled]="!selectedFiles"
+              (click)="uploadSingle()">
+  
+        Upload Single
+      </button>
+  
+      <label>
+         <input type="file" (change)="detectFiles($event)" multiple>
+      </label>
+  
+        <button
+                [disabled]="!selectedFiles"
+                (click)="uploadMulti()">
+  
+          Upload Multiple
+        </button>
     </ion-content>
     
