--- a/src/pages/grades/grades.html
+++ b/src/pages/grades/grades.html
@@ -1,7 +1,7 @@
 <ion-header  no-border>
 
   <ion-navbar transparent>
-    <ion-title>grades</ion-title>
+    <ion-title>lectures</ion-title>
   </ion-navbar>
 
 </ion-header>
