--- a/src/pages/timetable/timetable.html
+++ b/src/pages/timetable/timetable.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 
-<ion-content class="back"  *ngIf="loginAs == student" padding>
+<ion-content class="back" padding>
   <div class="container">
     <div class="row">
       <div class="col-12">
