--- a/src/pages/doctors/doctors.html
+++ b/src/pages/doctors/doctors.html
@@ -31,7 +31,7 @@
     </ion-card-content>
     </ion-card>
     
-    <button ion-button   round >
+    <button ion-button   round  (click)="uploadLec()" >
     <ion-icon start name="paper"></ion-icon>
       Upload Lectures
     </button>
