--- a/src/pages/createprofile/createprofile.html
+++ b/src/pages/createprofile/createprofile.html
@@ -20,7 +20,7 @@
         <p> *fullName is At least 10 characters in length  </p>
         </ion-item>
       
-        <ion-item class="input2" *ngIf="loginAs == 'student'" >
+        <ion-item class="input2" >
           <ion-label style="color:rgb(61, 140, 243)" floating>Level</ion-label>
           <ion-input  type="number" style="color: black" maxlength="1"  formControlName="level" [(ngModel)]="profile.level"   ></ion-input>
         </ion-item> 
