--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -41,6 +41,12 @@
     <button type="submit" class="button2"  id="login-button2" ion-button  round outline>
       login
     </button>
+
+    <button ion-button  (click)="tab2()" >
+      <ion-icon name="color-wand"></ion-icon>
+      DOCTOR
+    </button>
+
   </form>
 
 <br>
