--- a/src/pages/doctors/doctors.html
+++ b/src/pages/doctors/doctors.html
@@ -1,7 +1,8 @@
+
 <ion-header no-border>
 
   <ion-navbar transparent>
-    <ion-title>profile</ion-title>
+    <ion-title>doctors</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -20,9 +21,6 @@
         {{ (profileData | async)?.gender }} </p>
     </ion-item>
     <ion-item>
-        <p> Level:   {{ (profileData | async)?.level }} </p>
-    </ion-item>
-    <ion-item>
       <p> Semester :  spring </p>
     </ion-item>
     <ion-item>
@@ -31,7 +29,15 @@
   </ion-list>
 </ion-card-content>
 </ion-card>
-
-
+    
+    <button ion-button   round  (click)="uploadLec()" >
+    <ion-icon start name="paper"></ion-icon>
+      Upload Lectures
+    </button>
+    <br> 
+    <button ion-button  round   (click)="timeTable()">
+    <ion-icon end name="calendar"></ion-icon>
+      Show TimeTable
+    </button>
 
 </ion-content>
