--- a/src/pages/grades/grades.html
+++ b/src/pages/grades/grades.html
@@ -1,10 +1,10 @@
 <ion-header  no-border>
 
   <ion-navbar transparent>
-    <ion-title>grades</ion-title>
+    <ion-title>lectures</ion-title>
   </ion-navbar>
-
 </ion-header>
+
 <ion-content class="back"  padding>
-  <button ion-button black (clic)="choose()" > UpLoad a File </button>
     </ion-content>
+    
